--- a/ShoppingList/res/layout/row.xml
+++ b/ShoppingList/res/layout/row.xml
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:layout_height="match_parent" >
     
     <TextView 
         android:id="@+id/item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="16dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
         />
     
     <Button 
@@ -15,12 +17,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/plus"
+        android:layout_toLeftOf="@+id/num"
         />
     
     <EditText 
         android:id="@+id/num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_toLeftOf="@+id/minus"
         />
     
     <Button 
@@ -28,7 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/minus"
+        android:layout_alignParentRight="true"
         />
     
 
-</LinearLayout>
+</RelativeLayout>
