--- a/ShoppingList/res/layout/row.xml
+++ b/ShoppingList/res/layout/row.xml
@@ -12,6 +12,15 @@
         android:layout_marginLeft="5dp"
         />
     
+    <TextView 
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/plus"
+        android:textSize="16dp"
+        android:layout_centerVertical="true"
+        />
+    
     <Button 
         android:id="@+id/plus"
         android:layout_width="wrap_content"
