Check entered fields on 1st screen; created User and added Parcelable functionality to User and Item

--- a/ShoppingList/res/layout/activity_main.xml
+++ b/ShoppingList/res/layout/activity_main.xml
@@ -1,5 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    	xmlns:tools="http://schemas.android.com/tools"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent" >
+
+<RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.GUI.assignment1.MainActivity" >
 
-
+	
     <EditText 
         android:id="@+id/name"
         android:layout_alignParentTop="true"
@@ -95,7 +99,7 @@
     
     <Button 
         android:id="@+id/submitBut"
-        android:layout_alignParentBottom="true"
+		android:layout_below="@+id/email"
         android:layout_alignParentLeft="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -103,3 +107,5 @@
         />
 
 </RelativeLayout>
+
+</ScrollView>
