Added pass List fuctionality. Review activity created; method to create list of suggested items to remove doesn't work, app crashes: fix

--- a/ShoppingList/res/layout/choose_items.xml
+++ b/ShoppingList/res/layout/choose_items.xml
@@ -13,6 +13,7 @@
     />
     
     <Button 
+        android:id="@+id/submitItems"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/checkout"
